<resources>
    <string name="app_name">SONZABA</string>
    <string name="TextView_Admin">Administer Mode</string>
    <string name="button_reset">RESET USER DATA</string>
    <string name="button_exit">EXIT</string>
    <string name="textView_result">Result</string>
    <string name="button">Enter the PROFILE</string>
    <string name="button2">Show the PROFILE</string>
    <string name="buttonAdmin">Admin</string>
    <string name="textView">Please tag NFC</string>
    <string name="textView2">Enter your child information</string>
    <string name="textView_main_name">Name</string>
    <string name="editText_main_name">Enter child"s name</string>
    <string name="textView_main_age">Age</string>
    <string name="editText_main_age">Enter child"s age</string>
    <string name="textView_main_phone">Phone number</string>
    <string name="editText_main_phone">Enter your phone number</string>
    <string name="textView_main_id">id :</string>
    <string name="textView3">NAME     :</string>
    <string name="textView_Show_Name">NAME</string>
    <string name="textView4">AGE         :</string>
    <string name="textView_Show_Age">AGE</string>
    <string name="textView5">PHONE   :</string>
    <string name="textView_Show_Phone">PHONE</string>
    <string name="textView6">ID             :</string>
    <string name="textView_Show_ID">ID</string>
    <string name="button_main_insert">Insert</string>
    <string name="move_to_setting">Move To Setting</string>
    <string name="nfc_title">NFC Permission Guide</string>
    <string name="nfc_message">Please activate NFC and run the app again!</string>
    <string name="invalid_access">Invalid Access</string>
    <string name="button_notice">Update Notice</string>
    <string name="textView_notice">NOTICE</string>
    <string name="tag_confirm">Tag Matched (Login Success)</string>
    <string name="All_Permissions_Approved">All Permissions Approved</string>
    <string name="Permissions_Denied">Please Approve All Permissions</string>
    <string name="Notice_Update_Complete">Notice Update Complete</string>
    <string name="Notice_Update_Failed">Notice Update Failed</string>
    <string name="Update_Notice">Update Notice Tab</string>
    <string name="map_button">View Maps</string>
    <string name="channel_name">UnKnowN</string>
    <string name="channel_description">UnKnowN_description</string>
    <string name="en">English</string>
    <string name="ko">Korean</string>
    <string name="ja">Japanese</string>
    <string name="zh">Chinese</string>
    <string name="lang_title">Select Language</string>
    <string name="textView_logout_title">LOGOUT</string>
    <string name="textView_logout">Are you sure you want to log out?</string>
    <string name="button_yes">YES</string>
    <string name="button_no">NO</string>
    <string name="textView_logout_confirm">Thank You For Using</string>
    <string name="textView_serial">(serial)</string>
    <string name="enable_the_bluetooth">Please Enable The Bluetooth</string>
    <string name="not_avaliable_bluetooth">Device Not Available Bluetooth</string>
    <string name="lost_child">A CHILD MISSED!</string>
    <string name="call_manager">Would you like to contact the manager?</string>
    <string name="height">height</string>
    <string name="credit1" translatable="false">"Smart Mobile Programming Team 2 (UnKnowN)\n\nTeam Leader\n윤혁진\n\nTeam\n김진홍, 박래근, 서동관, 신의철, 이대근, 이재훈"</string>
    <string name="slider1">Make sure your app is installed properly!</string>
    <string name="slider2">Tag NFC!</string>
    <string name="slider3">Lobby screen!</string>
    <string name="slider4">You can change the language!</string>
    <string name="slider5">Log out after using the app!</string>
    <string name="slider6">Tab \'Enter the PROFILE\'!</string>
    <string name="slider7">Write your child\'s information and tab \'Insert\'!</string>
    <string name="slider8">Tab \'Show the PROFILE\'!</string>
    <string name="slider9">Check your child\'s information and an alarm sounds when you are away from your child!</string>
    <string name="slider10">Tab \'View Map\'!</string>
    <string name="slider11">Show rides that can be boarded according to your child\'s height!</string>
    <string name="slider12">Press \'START\' to start the app!</string>
    <string name="slider13">You can check the intro again !</string>
    <string name="safe">SAFE</string>
    <string name="warning">WARNING</string>
    <string name="danger">DANGER</string>
    <string name="missing">MISSING!</string>
    <string name="child_info">Child Information</string>
    <string name="status">Status</string>
</resources>
