<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingTop="50dp"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    tools:context=".ProfileActivity">

    <TextView
        android:id="@+id/s"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/font_scdream4"
        android:gravity="center_horizontal"
        android:paddingBottom="50dp"
        android:text="@string/textView2"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/textView_main_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/font_scdream4"
        android:text="@string/textView_main_name" />

    <EditText
        android:id="@+id/editText_main_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/font_scdream4"
        android:hint="@string/editText_main_name"
        android:focusable="true"
        android:maxLength="5"
        android:inputType="textPersonName"
        android:nextFocusDown="@+id/editText_main_age"/>

    <TextView
        android:id="@+id/textView_main_age"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/font_scdream4"
        android:text="@string/textView_main_age" />

    <EditText
        android:id="@+id/editText_main_age"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/font_scdream4"
        android:hint="@string/editText_main_age"
        android:maxLength="2"
        android:inputType="number"
        android:nextFocusDown="@+id/editText_main_phone"/>

    <TextView
        android:id="@+id/textView_main_phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/font_scdream4"
        android:text="@string/textView_main_phone" />

    <EditText
        android:id="@+id/editText_main_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/font_scdream4"
        android:hint="@string/editText_main_phone"
        android:maxLength="11"
        android:inputType="phone"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp">

        <TextView
            android:id="@+id/textView_main_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/font_scdream4"
            android:text="@string/textView_main_id" />

        <TextView
            android:id="@+id/textViewId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"/>
    </LinearLayout>


    <Button
        android:id="@+id/button_main_insert"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:layout_marginBottom="40dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:background="@drawable/buttonshape"
        android:shadowColor="#6B6B6B"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="10"
        android:fontFamily="@font/font_scdream4"
        android:text="@string/button_main_insert" />

    <Button
        android:id="@+id/button3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:background="@drawable/buttonshape"
        android:shadowColor="#6B6B6B"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="10"
        android:fontFamily="@font/font_scdream4"
        android:text="@string/button_exit" />

    <TextView
        android:id="@+id/textView_main_result"
        android:layout_width="match_parent"
        android:layout_height="250dp" />

</LinearLayout>