<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".LobbyActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:weightSum="1">

            <ImageView
                android:id="@+id/main_logo"
                android:layout_width="249dp"
                android:layout_height="350dp"
                android:layout_marginLeft="80dp"
                android:paddingTop="30dp"
                app:srcCompat="@drawable/unknown_logo"/>

            <Button
                android:id="@+id/buttonAdmin"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="left|center_vertical"
                android:layout_marginTop="25dp"
                android:layout_marginLeft="70dp"
                android:background="#00000000"
                android:text="@string/buttonAdmin"
                android:textColor="#FFFFFF"
                android:textSize="8sp"
                android:visibility="visible" />

        </FrameLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
            android:id="@+id/lang_menu"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:onClick="change_lang"
            app:srcCompat="@drawable/lang_icon" />

            <ImageView
                android:id="@+id/logout"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="30dp"
                android:layout_below="@id/lang_menu"
                android:onClick="logout_user"
                app:srcCompat="@drawable/logout_icon" />
        </RelativeLayout>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="60dp"
            android:layout_marginRight="50dp"
            android:fontFamily="@font/font_scdream4"
            android:text="@string/textView_notice" />

        <TextView
            android:id="@+id/textView_notice_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:layout_marginBottom="30dp"
            android:background="@drawable/textviewshape"
            android:ellipsize="marquee"
            android:singleLine="true"
            android:fontFamily="@font/font_scdream4"
            android:marqueeRepeatLimit="marquee_forever"
            android:padding="8dp" />

        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/buttonshape"
            android:fontFamily="@font/font_scdream4"
            android:text="@string/button"
            android:textColor="#FFFFFF"
            android:textSize="20sp" />

        <Button
            android:id="@+id/button2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:background="@drawable/buttonshape"
            android:fontFamily="@font/font_scdream4"
            android:text="@string/button2"
            android:textColor="#FFFFFF"
            android:textSize="20sp" />

        <Button
            android:id="@+id/button22"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/buttonshape"
            android:fontFamily="@font/font_scdream4"
            android:text="SHOW PROFILE (DEV)"
            android:textColor="#FFFFFF"
            android:onClick="go_show"
            android:textSize="16sp" />

        <Button
            android:id="@+id/map_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/buttonshape"
            android:fontFamily="@font/font_scdream4"
            android:text="@string/map_button"
            android:textColor="#FFFFFF"
            android:textSize="20sp" />

        <Button
            android:id="@+id/button4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/buttonshape"
            android:onClick="ExitApp"
            android:fontFamily="@font/font_scdream4"
            android:text="@string/button_exit"
            android:textColor="#FFFFFF"
            android:textSize="20sp" />

    </LinearLayout>
</LinearLayout>